apps/web/src/styles.css
@import url('image-cropper/styles.css');

@tailwind base;
@tailwind components;
@tailwind utilities;

html {
  @apply overflow-y-scroll;
}

body {
  @apply bg-gray-50;
  @apply dark:bg-black;
}

.shimmer {
  @apply animate-pulse;
  @apply bg-gray-300;
  @apply dark:bg-gray-600;
}

.menu-item {
  @apply m-2 block cursor-pointer rounded-lg px-4 py-1.5 text-sm text-gray-700 dark:text-gray-200;
}

.text-brand {
  @apply text-brand-500 dark:text-brand-400/80;
}

.linkify a {
  @apply text-brand;
  @apply hover:text-brand-600 dark:hover:text-brand-500;
}

.linkify-message a {
  @apply hover:decoration-2;
  @apply underline;
}

.tab-bg {
  @apply hover:bg-brand-200;
}

.tab-bg:hover > span {
  @apply bg-brand-300;
}

.identicon {
  width: 100% !important;
  height: 100% !important;
}

::-webkit-file-upload-button {
  @apply mr-2 cursor-pointer rounded-l-xl border-0 px-3 py-2;
  @apply bg-gray-200 dark:bg-gray-900;
}

.bg-hero {
  background: linear-gradient(
      90deg,
      theme('colors.white'),
      theme('colors.white') 50%,
      theme('colors.transparent')
    ),
    url(https://static-assets.lenster.xyz/images/hero.webp);
  background-size: cover;
}
.dark .bg-hero {
  background: linear-gradient(
      90deg,
      theme('colors.black'),
      theme('colors.black') 50%,
      theme('colors.transparent')
    ),
    url(https://static-assets.lenster.xyz/images/hero.webp);
  background-size: cover;
}

.no-scrollbar::-webkit-scrollbar {
  display: none;
}

.no-scrollbar {
  -ms-overflow-style: none;
  scrollbar-width: none;
}

.giphy-gif {
  @apply !rounded-none;
}

.page-center {
  @apply flex h-[calc(100vh-65px)] items-center justify-center;
}

.tippy-content {
  @apply !px-2.5 !py-0.5;
}

.label {
  @apply mb-1 font-medium text-gray-800 dark:text-gray-200;
}

.dropdown-active {
  @apply bg-gray-100 dark:bg-gray-800;
}

.divider {
  @apply border-b dark:border-gray-700;
}

.lt-text-gray-500 {
  @apply text-gray-500 dark:text-gray-200;
}

.text-md {
  @apply !text-sm sm:!text-base;
}

.iframely-player,
iframe {
  @apply rounded-xl;
}

/** CSS overrides for plyr audio **/
.plyr--audio .plyr__controls {
  @apply !bg-transparent !text-white;
}

.plyr--audio .plyr__control {
  @apply hover:!bg-transparent;
}

.plyr--audio.plyr--full-ui input[type='range'] {
  @apply !text-white;
}

.toolbar-icons button {
  @apply hover:bg-brand-100 text-brand rounded-lg p-1.5;
}

.toolbar-icon {
  @apply flex h-[20px] w-[20px] bg-contain bg-center bg-no-repeat;
}

i.bold {
  background-image: url(/assets/type-bold.svg);
}

i.italic {
  background-image: url(/assets/type-italic.svg);
}

i.code {
  background-image: url(/assets/type-code.svg);
}

div[data-lexical-editor='true'] {
  @apply outline-none;
}

.pb-safe {
  padding-bottom: env(safe-area-inset-bottom);
}

#typeahead-menu {
  @apply z-20;
}

.rc-slider-rail {
  @apply bg-brand-500 !important;
  @apply opacity-30;
}

.rc-slider-track {
  @apply bg-brand-500 !important;
}

.rc-slider-handle {
  @apply border-brand-500 !important;
}

.rc-slider-handle-dragging {
  box-shadow: 0 0 0 5px rgb(139 92 246 / 0.3) !important;
}

/* Markup styles */

.markup > p,
ul {
  @apply !leading-6 sm:!leading-7;
  @apply [&:not(:last-child)]:mb-5;
}

.lp-player > div > div {
  @apply border border-gray-100 shadow-none dark:border-gray-700;
}

.input-black {
  color: black;
}

